--- a/src/app/homepage/high-demand-ppe/high-demand-ppe.component.scss
+++ b/src/app/homepage/high-demand-ppe/high-demand-ppe.component.scss
@@ -70,4 +70,22 @@
       }
     }
   }
+
+  @include media-breakpoint-down(sm) { 
+      .high-demand-ppe__tiles{
+        &-image {
+          filter: brightness(0.8);
+          @include transform-scale(1.05);
+        }
+
+        &-description {
+          opacity: 0;
+        }
+
+        &-btn {
+          opacity: 1;
+        }
+      }
+      
+  }
 }
