--- a/src/app/homepage/medkonnect-landing/medkonnect-landing.component.html
+++ b/src/app/homepage/medkonnect-landing/medkonnect-landing.component.html
@@ -1,7 +1,7 @@
 <div class="medkonnect-landing">
   <div class="medkonnect-landing__container row mx-0">
     <!-- Request Provide PPE from md screens -->
-    <div class="d-none d-lg-block col-12 col-lg-5 pl-5">
+    <div class="d-none d-lg-block col-12 col-lg-5 pl-5 mt-md-3">
       <div class="medkonnect-landing__request-ppe">
         <div class="my-auto pt-5">
           <h1 class="header">Are you in Need of PPE?</h1>
