--- a/src/app/needppe/needppe.component.html
+++ b/src/app/needppe/needppe.component.html
@@ -11,22 +11,22 @@
     <div class="mk-form__form pb-5">
       <form [formGroup]="needppeForm">
         <div class="form-group formStyle p-5 mb-5 firstCard">
-          <label class="mk-required" for="InputName">Full Name</label>
-          <input ncovAlphaNumeric id="InputName" type="text" class="form-control mt-5 no-border" aria-describedby="Yourname"
+          <label class="mk-required pl-sm-2" for="InputName">Full Name</label>
+          <input ncovAlphaNumeric id="InputName" type="text" class="form-control mt-md-5 mt-2 no-border" aria-describedby="Yourname"
             placeholder="Your name" formControlName="name">
           <small class="text-danger" *ngIf="needppeForm.controls.name.touched && needppeForm.controls.name.errors?.required">This is a required field</small>
         </div>
         <div class="form-group formStyle p-5 mt-md-5 mb-5">
           <label class="mk-required" for="inputNumber">Phone number</label>
-          <input ncovNumeric id="inputNumber" type="text" class="form-control mt-5 mr-3 no-border" placeholder="Your Number"
+          <input ncovNumeric id="inputNumber" type="text" class="form-control mt-md-5 mt-2 mr-3 no-border" placeholder="Your Number"
             formControlName="phoneNo">
             <small class="text-danger" *ngIf="needppeForm.controls.phoneNo.touched && needppeForm.controls.phoneNo.errors?.required">This is a required field</small>
         </div>
         <div class="form-group formStyle p-5 mt-md-5 mb-5">
           <label class="mk-required" for="areYouDoctor">Are you a doctor?</label>
-          <button type="button" class="mk-btn-xs mk-btn-primary px-3 px-md-4 mt-5"
+          <button type="button" class="mk-btn-xs mk-btn-primary px-3 px-md-4 mt-md-5 mt-2"
             (click)="toggleDoctor(true)">Yes</button>
-          <button type="button" class="mk-btn-xs mk-btn-primary px-3 px-md-4 ml-3 mt-5"
+          <button type="button" class="mk-btn-xs mk-btn-primary px-3 px-md-4 ml-3 mt-md-5 mt-2"
             (click)="toggleDoctor(false)">No</button>
         </div>
         <div class="form-group formStyle p-5 mt-md-5 mb-5"
@@ -59,7 +59,7 @@
             Addresses from popular
             email providers shall not be accepted. If you do not have a corporate email address, please input your MCI
             number in the field above.</small>
-          <input type="text" id="email" class="form-control mt-5 no-border" placeholder="Your Email" formControlName="email">
+          <input type="text" id="email" class="form-control mt-md-5 mt-2 no-border" placeholder="Your Email" formControlName="email">
           <small class="text-danger" *ngIf="needppeForm.controls.email.touched && needppeForm.controls.email.errors?.required">This is a required field</small>
           <small class="text-danger" *ngIf="needppeForm.controls.email.touched && needppeForm.controls.email.errors?.email && isDoctor">Please enter a valid email address</small>
           <small class="text-danger" *ngIf="needppeForm.controls.email.touched && needppeForm.controls.email.errors?.pattern && !isDoctor">We only accept corporate email addresses. Gmail/Outlook/Hotmail/apple email addresses are not accepted</small>
@@ -67,7 +67,7 @@
         <!-- Email Address Ends -->
         <div class="form-group formStyle p-5 mt-md-5 mb-5">
           <label class="mk-required" for="address">Delivery Address</label>
-          <input type="address" id="address" class="form-control mt-5 no-border" placeholder="Delivery Address"
+          <input type="address" id="address" class="form-control mt-md-5 mt-2 no-border" placeholder="Delivery Address"
             formControlName="address">
             <small class="text-danger" *ngIf="needppeForm.controls.address.touched && needppeForm.controls.address.errors?.required">This is a required field</small>
         </div>
@@ -79,14 +79,14 @@
         </div>
         <div class="form-group formStyle  p-5 mt-md-5 mb-5">
           <label class="mk-required" for="pinCode">Pincode</label>
-          <input ncovNumeric id="pinCode" type="pincode" class="form-control mt-5 no-border" placeholder="Pincode"
+          <input ncovNumeric id="pinCode" type="pincode" class="form-control mt-md-5 mt-2 no-border" placeholder="Pincode"
             formControlName="pinCode">
             <small class="text-danger" *ngIf="needppeForm.controls.pinCode.touched && needppeForm.controls.pinCode.errors?.required">This is a required field</small>
         </div>
         <!-- home made -->
         <div class="form-group formStyle p-5 mt-md-5 mb-5">
-          <label class="mk-required" for="homemade PPE">Are You Willing to Accept HomeMade/Uncertified PPE</label>
-          <div class="px-3 px-md-4 mt-5">
+          <label class="mk-required" for="homemade PPE">Are You Willing to Accept HomeMade or Uncertified PPE</label>
+          <div class="px-3 px-md-4 mt-md-5 mt-2">
             <label class="mk-required" for="homeMade_true" class="mk-radio-yes mk-radio-container" >
               <input type="radio" id="homeMade_true" value="true" formControlName="homeMade">
               <i class="radiomark"></i>
@@ -95,7 +95,7 @@
             <label class="mk-required" for="homeMade_false" class="mk-radio-no mk-radio-container">
               <input type="radio" id="homeMade_false" value="false" formControlName="homeMade">
               <i class="radiomark"></i>
-              No
+              No 
             </label>
           </div>
         </div>
@@ -129,7 +129,7 @@
                 <div class="col-lg-4 col-md-6 mt-2 mb-md-2 mb-4">
                   <input ncovAlphaNumeric type="text" class="form-control no-border w-100" placeholder="Other PPE Item" [formControlName]="ppeList[i].otherPpe" (change)="onTogglePpe(i)" >
                 </div>
-                <div class="col-lg-4 col-md-6 mt-2 mb-md-2 mb-4">
+                <div class="col-lg-4 col-md-6 mt-2 mb-md-2 mb-4 ml-md-auto">
                   <input ncovNumeric type="text" class="form-control" placeholder="Quantity" [formControlName]="ppeList[i].required">
                 </div>
               </div>
