--- a/src/scss/forms/_medkonnect-form.scss
+++ b/src/scss/forms/_medkonnect-form.scss
@@ -30,6 +30,10 @@
   display: flex;
   align-items: center;
   text-indent: 3px;
+
+  @include  media-breakpoint-down(sm) {
+    font-size: 16px;
+  }
 }
 
 select.mk-select {
