Added about us page content and images

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,3 +1,73 @@
-<div class="d-flex h-100">
-  
+<div class="d-flex flex-column about-us">
+  <div class="d-flex h-100 section">
+    <div
+      class="w-100 text-center d-flex flex-column justify-content-center h-100 px-5"
+    >
+      <h1>Who are we?</h1>
+      <p>
+        We are a group of individuals from different fields of work who have
+        come together to help in the fight against COVID-19.
+      </p>
+      <p>
+        At the frontlines of this fight are our Doctors, Nurses and other
+        medical staff who need to be equipped adequately with protecive gear so
+        as to avoid themselves from contracting this virus while risking
+        themselves to treat others.
+      </p>
+      <p>
+        In the face of this pandemic there is an alarming shortage of Personal
+        Protective Equipment such as goggles, face-shield, mask and our goal is
+        to match the rising demand of PPE with their supply.
+      </p>
+      <p>
+        Our main goal is to match the rise in demand for PPE to its supply to
+        effectively combat COVID-19
+      </p>
+    </div>
+    <div class="w-100 who-are-we h-100 d-none d-sm-flex"></div>
+  </div>
+
+  <div class="d-flex h-100 section">
+    <div class="w-100 how-we-do-it h-100 d-none d-sm-flex"></div>
+    <div
+      class="w-100 text-center d-flex flex-column justify-content-center h-100 px-5"
+    >
+      <h1>How we do it?</h1>
+      <p>
+        To achieve our goal we have created a platform that aggregates requests
+        from hospitals and presents it before individuals or ogranistaions that
+        have s surplus of supply in a given area.
+      </p>
+      <p>
+        If you are a manufacturer of Protective equipment, supplier, an NGO or
+        anyone with additional equpiment, now is the time to help our hospitals
+        curb their short supply of PPE's by registering on our website as a
+        provider
+      </p>
+      <p>
+        If you are a medical professional requiring PPE, reach out, we are
+        trying to actively source PPE from medical suppliers to protect you, so
+        that you can continue to protect us
+      </p>
+      <p>
+        We also have designs and blueprints for the development of masks
+        (N95/Surgical) and blueprints of other medical equipment on this
+        website. If you are an individual or an SME looking to help by
+        manufacturing and producing PPE and medical equipment, you can visit our
+        site, download the materials and start right away.
+      </p>
+    </div>
+  </div>
+  <div class="d-flex flex-column flex-md-row h-100 justify-content-around my-5">
+    <div class="text-center w-100 px-5 my-3">
+      <h1 class="my-3">Our Mission</h1>
+      <i class="fas fa-bullseye font-icon"></i>
+      <p class="px-5 mt-3">Our mission to bridge the gap between demand and supply, we do so by creating a platform where suppliers of protective equipment are hosted alongside Medic Professionals who require them.</p>
+    </div>
+    <div class="text-center w-100 px-5 my-3">
+      <h1 class="my-3">Our Solution</h1>
+      <i class="far fa-lightbulb font-icon"></i>
+      <p class="px-5 mt-3">We have made provisions in our Solution for Medic Professionals to put forth their requirements and for suppliers of PPE's to have clear view of the demand and meet the same.</p>
+    </div>
+  </div>
 </div>
