Added About us page - generated component using ng g - Added images for the entire page in /assets/images/ - Added flex based styles to each section and also verified on mobile.

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,73 +1,69 @@
 <div class="d-flex flex-column about-us">
-  <div class="d-flex h-100 section">
-    <div
-      class="w-100 text-center d-flex flex-column justify-content-center h-100 px-5"
-    >
-      <h1>Who are we?</h1>
+  <div class="d-flex mb-5 page-header">
+    <div class="w-100 px-0">
+      <img
+        src="assets/images/about-us-page-header.png"
+        alt="About us"
+        class="w-100"
+      />
+      <div class="carousel-caption">
+        <h1 class="d-none d-sm-block pb-lg-4 headerText header">About Us</h1>
+      </div>
+    </div>
+  </div>
+  <div class="d-flex flex-column align-items-center container text-center">
+    <img src="../../assets/images/who-are-we.png" class="img-fluid"/>
+
+    <div class="mt-4">
       <p>
         We are a group of individuals from different fields of work who have
-        come together to help in the fight against COVID-19.
+        come together to help in thefight against the Novel Coronavirus Disease
+        2019 or COVID-19 pandemic.
       </p>
       <p>
-        At the frontlines of this fight are our Doctors, Nurses and other
-        medical staff who need to be equipped adequately with protecive gear so
+        At the frontlines of this fight are Our Doctors, Nurses and other
+        medical staff who need to be equipped adequately with protective gear so
         as to avoid themselves from contracting this virus while risking
-        themselves to treat others.
-      </p>
-      <p>
-        In the face of this pandemic there is an alarming shortage of Personal
-        Protective Equipment such as goggles, face-shield, mask and our goal is
-        to match the rising demand of PPE with their supply.
+        themselves to treat others. In the face of this pandemic there is an
+        alarming shortage of Personal Protective Equipment such as goggles,
+        face-shield, mask and our goal is to match the rising demand of PPE with
+        theirsupply.
       </p>
       <p>
         Our main goal is to match the rise in demand for PPE to its supply to
-        effectively combat COVID-19
+        effectively combat COVID-19.
       </p>
     </div>
-    <div class="w-100 who-are-we h-100 d-none d-sm-flex"></div>
   </div>
+  <div class="d-flex flex-column align-items-center container mt-5 text-center">
+    <h1>How we do it?</h1>
 
-  <div class="d-flex h-100 section">
-    <div class="w-100 how-we-do-it h-100 d-none d-sm-flex"></div>
-    <div
-      class="w-100 text-center d-flex flex-column justify-content-center h-100 px-5"
-    >
-      <h1>How we do it?</h1>
+    <div class="mt-4">
       <p>
-        To achieve our goal we have created a platform that aggregates requests
-        from hospitals and presents it before individuals or ogranistaions that
-        have s surplus of supply in a given area.
+        To achieve our goal we have created a platform that aggregates requests from hospitals and presents it before individuals or organizations that have a surplus of supply in a given area. 
       </p>
       <p>
-        If you are a manufacturer of Protective equipment, supplier, an NGO or
-        anyone with additional equpiment, now is the time to help our hospitals
-        curb their short supply of PPE's by registering on our website as a
-        provider
+        If you are a manufacturer of protective equipment, supplier, an NGO or anyone with additional equipment, now is the time to help our hospitals curb their short supply of PPE’s by registering on our website as a provider. 
       </p>
       <p>
-        If you are a medical professional requiring PPE, reach out, we are
-        trying to actively source PPE from medical suppliers to protect you, so
-        that you can continue to protect us
+        If you are a medical professional requiring PPE, reach out. We are trying to actively source PPE from medical suppliers to protect you, so that you can continue to protect us. 
       </p>
       <p>
-        We also have designs and blueprints for the development of masks
-        (N95/Surgical) and blueprints of other medical equipment on this
-        website. If you are an individual or an SME looking to help by
-        manufacturing and producing PPE and medical equipment, you can visit our
-        site, download the materials and start right away.
+        We also have designs and blueprints for the development of masks (N95/Surgical) and blueprints of other medical equipment on this website. If you are an individual or an SME looking to help by manufacturing and producing PPE and medical equipment, you can visit our site, download the materials and start right away.
       </p>
     </div>
   </div>
-  <div class="d-flex flex-column flex-md-row h-100 justify-content-around my-5">
-    <div class="text-center w-100 px-5 my-3">
-      <h1 class="my-3">Our Mission</h1>
-      <i class="fas fa-bullseye font-icon"></i>
-      <p class="px-5 mt-3">Our mission to bridge the gap between demand and supply, we do so by creating a platform where suppliers of protective equipment are hosted alongside Medic Professionals who require them.</p>
+  <div class="d-flex flex-column flex-md-row align-items-center container justify-content-around mt-5 text-center">
+    <div class="d-flex flex-column align-items-center flex-wrap">
+
+      <h1 class="mb-3">Our Mission</h1>
+      <img src="../../assets/images/our-mission.png"/>
+      <p class="mt-2 px-2 px-md-5">Our Mission is to tobridge the gap between Demand and Supply. We do so by creating a platform whereSuppliers of Protective equipment are hosted alongside Medic Professionals whorequire them.</p>
     </div>
-    <div class="text-center w-100 px-5 my-3">
-      <h1 class="my-3">Our Solution</h1>
-      <i class="far fa-lightbulb font-icon"></i>
-      <p class="px-5 mt-3">We have made provisions in our Solution for Medic Professionals to put forth their requirements and for suppliers of PPE's to have clear view of the demand and meet the same.</p>
+    <div class="d-flex flex-column align-items-center flex-wrap">
+      <h1 class="mb-3">Our Solution</h1>
+      <img src="../../assets//images/our-solution.png"/>
+      <p class="mt-2 px-2 px-md-5">We have made provisions in our Solution for Medic Professionals to put forth their requirements and for Suppliers of PPE’s to have a clear view of the demand and meet the same.</p>
     </div>
   </div>
 </div>
