--- a/src/app/common/components/dialog/dialog.component.scss
+++ b/src/app/common/components/dialog/dialog.component.scss
@@ -1,30 +1,27 @@
 .ncov-modal {
   @import "../../../../scss/bootstrap";
 
-  position: absolute;
+  position: fixed;
+  border-radius: 10px;
   left: 50%;
+  width: 450px;
+  z-index: 9999;
 
-  &::after {
-    content: '';
+  &-backdrop {
+    width: 100%;
+    height: 100%;
     position: fixed;
-    height: auto;
     top: 0;
     left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(0, 0, 0, 0.5);
-    z-index: 998;
+    background-color: $black;
+    opacity: 0.7;
+    z-index: 9999;
   }
 
   &-content {
-    padding: 20px;
     position: relative;
     top: 200px;
     left: -50%;
-    height: auto;
-    background-color: transparent;
-    border: none;
-    z-index: 999;
   }
 
   &__action-btn {
@@ -67,5 +64,7 @@
     background-color: rgba($color: $btn-primary, $alpha: 0.8);
     color: $white;
   }
+
+
 
 }
