--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex flex-column about-us">
   <div class="d-flex mb-5 page-header">
-    <div class="w-100 px-0">
+    <div class="w-100 px-0 position-relative">
       <img
         src="assets/images/about-us-page-header.png"
         alt="About us"
