--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,11 +10,8 @@
       <li class="nav-item border-right border-white pr-lg-4 pr-md-2">
         <a class="header nav-link" href="#" [routerLink]="'/need'">Login</a>
       </li>
-      <li class="nav-item border-right border-white pr-lg-4 pr-md-2">
-        <a class="header nav-link" href="#" [routerLink]="'/need'">Request</a>
-      </li>
       <li class="nav-item border-right border-white pr-lg-4 pl-lg-4 pr-md-2 pl-md-2">
-        <a class="nav-link header" href="#" [routerLink]="'/have'">Provide</a>
+        <a class="nav-link header" href="#" [routerLink]="'/build'">Build</a>
       </li>
       <li class="nav-item pr-lg-5 pl-lg-4 pl-md-2 pr-md-4">
         <a class="nav-link header" href="#" [routerLink]="'/about'">About Us</a>
