--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<ncov-header></ncov-header>
-<router-outlet></router-outlet>
-<ncov-footer></ncov-footer>
+<div *ngIf="isRouteDashboard">
+    <router-outlet></router-outlet>
+  </div>
+  <div *ngIf="!isRouteDashboard">
+    <ncov-header></ncov-header>
+    <router-outlet></router-outlet>
+    <ncov-footer></ncov-footer>
+  </div>
