--- a/src/app/haveppe/haveppe.component.html
+++ b/src/app/haveppe/haveppe.component.html
@@ -5,13 +5,13 @@
       <div class="col-md-12 px-0">
         <img src="assets/images/hospitalHeader.png" alt="hospitalHeader" class="w-100" />
         <div class="carousel-caption">
-          <h1 class="d-none d-sm-block pb-lg-4 headerText header">Give to the healthcare community</h1>
+          <h1 class="d-none d-sm-block pb-lg-4 headerText header">Sign Up</h1>
         </div>
       </div>
     </div>
     <div class="mk-form__form pb-5">
       <form [formGroup] = "haveppeForm">
-        <div formGroupName="materialsRequired">
+        <!-- <div formGroupName="materialsRequired">
           <div class="form-group formStyle p-5 firstCard mb-5">
             <label class="mk-required" for="PPE">What Do You Wish to Provide?</label>
             <div *ngFor="let ppe of haveppeForm.controls.materialsRequired['controls']; let i = index " [formGroupName]="i">
@@ -48,45 +48,9 @@
             <small *ngIf="!ppeItemSelected" class="text-danger d-block">Please select atleast one PPE item</small>
             <button type="button" (click)="toggleAdd($event.target)" class="mk-btn-sm mk-btn-primary px-3 px-md-4 mt-5">Add</button>
           </div>
-        </div>
+        </div> -->
 
-        <div class="form-group formStyle  p-5 mt-md-5 mb-5">
-          <label for="pinCode" class="mk-required">Pincode</label>
-          <input ncovNumeric id="pinCode" type="pincode" class="form-control mt-md-5 mt-2 no-border" placeholder="Pincode"
-            formControlName="pinCode">
-            <small class="text-danger" *ngIf="this.haveppeForm.controls.pinCode.touched && this.haveppeForm.controls.pinCode.errors?.required" >
-              This field is required
-            </small>
-          </div>
-
-        <div class="form-group formStyle  p-5 mt-md-5 mb-5">
-          <label for="registered">Is Your Organisation Registered?</label>
-          <small class="form-text text-muted">It is preferable to provide a registration number for verification purposes. 
-            Please leave the field blank if you are not registered.</small>
-          <input ncovAlphaNumeric id="registered" type="registrationNo" class="form-control mt-md-5 mt-2 no-border" placeholder="Registeration Number."
-          formControlName="companyRegistrationNo">
-        </div>
-
-        <div class="form-group formStyle p-5 mt-md-5 mb-5">
-          <label for="homemade PPE" class="mk-required">Is Your PPE Certified (ISO, ICMR, ICMED) ?</label>
-          <div class="px-3 px-md-4 mt-md-5 mt-2">
-            <label for="homeMade_true" class="mk-radio-yes mk-radio-container" >
-              <input type="radio" id="homeMade_true" value="true" formControlName="homeMade">
-              <i class="radiomark"></i>
-              Yes
-            </label>
-            <label for="homeMade_false" class="mk-radio-no mk-radio-container">
-              <input type="radio" id="homeMade_false" value="false" formControlName="homeMade">
-              <i class="radiomark"></i>
-              No
-            </label>
-          </div>
-          <small class="text-danger" *ngIf="this.haveppeForm.controls.homeMade.touched && this.haveppeForm.controls.homeMade.errors?.required" >
-            This field is required
-          </small>
-        </div>
-
-        <div class="form-group formStyle p-5 mb-5 mt-md-5">
+        <div class="form-group formStyle p-5 firstCard mb-5">
           <label for="InputName" class="mk-required">Full Name</label>
           <input ncovAlphaNumeric id="InputName" type="text" class="form-control mt-md-5 mt-2 no-border" aria-describedby="Yourname"
             placeholder="Your name" formControlName="name">
@@ -105,17 +69,61 @@
             </small>
           </div>
 
+                  <div class="form-group formStyle p-5 mt-md-5 mb-5">
+          <label class="mk-required" for="address">Delivery Address</label>
+          <input type="address" id="address" class="form-control mt-md-5 mt-2 no-border" placeholder="Delivery Address"
+            formControlName="address">
+            <small class="text-danger" *ngIf="haveppeForm.controls.address.touched && haveppeForm.controls.address.errors?.required">This is a required field</small>
+        </div>
         <div class="form-group formStyle p-5 mt-md-5 mb-5">
-          <label for="inputNumber" class="mk-required">Email Address</label>
-          <input type="text" class="form-control mt-md-5 mt-2 mr-3 no-border" placeholder="Your Email"
-            formControlName="email">
-            <small class="text-danger" *ngIf="this.haveppeForm.controls.email.touched && this.haveppeForm.controls.email.errors?.required" >
+          <label class="mk-required" for="state">State</label>
+          <select class="mk-select" formControlName="state" id="state" >
+            <option class="mk-select-option" *ngFor="let state of states" [value]="state">{{state}}</option>
+          </select>
+        </div>
+        <div class="form-group formStyle  p-5 mt-md-5 mb-5">
+          <label class="mk-required" for="city">City</label>
+          <input ncovAphaNumeric id="ncovAlphaNumeric" type="city" class="form-control mt-md-5 mt-2 no-border" placeholder="City"
+            formControlName="city">
+            <small class="text-danger" *ngIf="haveppeForm.controls.city.touched && haveppeForm.controls.city.errors?.required">This is a required field</small>
+        </div>
+
+          <div class="form-group formStyle p-5 mt-md-5 mb-5">
+            <label for="pinCode" class="mk-required">Pincode</label>
+            <input ncovNumeric id="pinCode" type="pincode" class="form-control mt-md-5 mt-2 no-border" placeholder="Pincode"
+              formControlName="pinCode">
+              <small class="text-danger" *ngIf="this.haveppeForm.controls.pinCode.touched && this.haveppeForm.controls.pinCode.errors?.required" >
+                This field is required
+              </small>
+            </div>
+  
+          <div class="form-group formStyle  p-5 mt-md-5 mb-5">
+            <label for="registered">Is Your Organisation Registered?</label>
+            <small class="form-text text-muted">It is preferable to provide a registration number for verification purposes. 
+              Please leave the field blank if you are not registered.</small>
+            <input ncovAlphaNumeric id="registered" type="registrationNo" class="form-control mt-md-5 mt-2 no-border" placeholder="Registeration Number."
+            formControlName="companyRegnNo">
+          </div>
+  
+          <!-- <div class="form-group formStyle p-5 mt-md-5 mb-5">
+            <label for="homemade PPE" class="mk-required">Is Your PPE Certified (ISO, ICMR, ICMED) ?</label>
+            <div class="px-3 px-md-4 mt-md-5 mt-2">
+              <label for="homeMade_true" class="mk-radio-yes mk-radio-container" >
+                <input type="radio" id="homeMade_true" value="true" formControlName="homeMade">
+                <i class="radiomark"></i>
+                Yes
+              </label>
+              <label for="homeMade_false" class="mk-radio-no mk-radio-container">
+                <input type="radio" id="homeMade_false" value="false" formControlName="homeMade">
+                <i class="radiomark"></i>
+                No
+              </label>
+            </div>
+            <small class="text-danger" *ngIf="this.haveppeForm.controls.homeMade.touched && this.haveppeForm.controls.homeMade.errors?.required" >
               This field is required
             </small>
-            <small class="text-danger" *ngIf="this.haveppeForm.controls.email.touched && this.haveppeForm.controls.email.errors?.email" >
-              Please input a valid Email address.
-            </small>
-          </div>
+          </div> -->
+  
           <div class="form-submit">
             <div class="terms-condition">
               <label class="mk-checkbox-container pt-3" for="termsCondition">
