--- a/src/app/homepage/medkonnect-landing/medkonnect-landing.component.html
+++ b/src/app/homepage/medkonnect-landing/medkonnect-landing.component.html
@@ -9,7 +9,7 @@
             Your safety is our primary concern. Request the protective equipments you need. We will help actively connect PPE suppliers to your need and ensure you get what you need on time
           </p>
           <div>
-            <button class="mk-btn-primary d-block mr-auto" data-toggle="modal" data-target="#getstartedModal" (click) = "setRequestFlag('need')">NEED PPE</button>
+            <button class="mk-btn-primary d-block mr-auto" data-toggle="modal" data-target="#getstartedModal">NEED PPE</button>
           </div>
         </div>
       </div>
@@ -20,7 +20,7 @@
             We will get you in touch with Medical professionals who critically need PPE pan India, helping you deliver what our healthcare heroes need the most as efficiently as possible.
           </p>
           <div>
-            <button class="mk-btn-primary d-block mr-auto" data-toggle="modal" data-target="#getstartedModal" (click) = "setRequestFlag('provide')">PROVIDE PPE</button>
+            <button class="mk-btn-primary d-block mr-auto" data-toggle="modal" data-target="#getstartedModal">PROVIDE PPE</button>
           </div>
         </div>
       </div>
